# presentation-formatter

./: Cargo.toml  README.md  README.md.bak  fungable-token.json  gitignore  input.csv  input.json  input.txt  lockable-fungable-token.json  lockup.json  output.md  presentation.json  presentation.json.bak  presentations2.json  starter.json
input-files/: cross-contract-low.json  fungable-token.json  input.csv  input.json  input.txt  presentation.json  starter.json
src/: csv_format.rs  formatter.rs  hackmd_formater.rs  hackmd_formatter.rs  json_format.rs  main.rs  util.rs
src/parser/: mod.rs
src/parser/grammar/: ident.pest
