[package]
name = "presentation-formater"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde= { version = "1" , features =["derive"]}
serde_json = "1.0.78"
regex = "1.5.4"
csv = "1.1"
clap = {version = "3.0.14", features =["derive"]}
reqwest = "0.11.9"
tokio = {version = "1.16.1" , features =["full"]}
pest = "2.1.3"
pest_derive = "2.1.0"